--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3307/cursoJava
 spring.datasource.username=root
 spring.datasource.password=
+
+
+security.jwt.secret=8qy4wfg8w48fgig803gfib
+security.jwt.issuer=Main
+#security.jwt.ttlMillis = hours * 3600000
+#La sesion dura 30min
+security.jwt.ttlMillis=1800000
